Monte_San_Savino sistemato

--- a/Monte_San_Savino.html
+++ b/Monte_San_Savino.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Monte San Savino</title>
 		<meta charset="utf-8">
-		<link href="Monte_San_Savino.css" rel="stylesheet" type="text/css">
+		<link href="css/Monte_San_Savino.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
 		<img id="cartina" src="Images\Mappa_Monte_San_Savino.png">
