Arezzo sistemato css ed eventuali immagini

--- a/Arezzo.html
+++ b/Arezzo.html
@@ -8,7 +8,7 @@ and open the template in the editor.
    <head>
       <title>Arezzo da fare</title>       <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Comune.css">
+        <link rel="stylesheet" type="text/css" href="css/index..css">
    </head>
    <body>
       <header>Arezzo (da fare)</header>
