Monterchi sistemato css ed eventuali immagini

--- a/Monterchi.html
+++ b/Monterchi.html
@@ -3,12 +3,12 @@
 	<head>
 	<title>Comune di Monterchi</title>
 	<meta charset="UTF-8">
-	<link href="monterchi.css" rel="stylesheet" type="text/css">
+	<link href="css\monterchi.css" rel="stylesheet" type="text/css">
 	</head>
 <body>	
 <div>
-<img id= "stemma" src="Immagini\monterchi_stemma_195x250.png" alt="Comune di Monterchi"/>
-<img id= "carta" src="Immagini\Monterchi_mappa.png"/>
+<img id= "stemma" src="images\monterchi_stemma_195x250.png" alt="Comune di Monterchi"/>
+<img id= "carta" src="images\Monterchi_mappa.png"/>
 
 </div>
 <nav id= "comuni">
