Castiglion_Fibocchi sistemato css ed eventuali immagini

--- a/Castiglion_Fibocchi.html
+++ b/Castiglion_Fibocchi.html
@@ -3,7 +3,7 @@
 	<head>
 		<title> Castiglion Fibocchi </title>
 		<meta charset="UTF-8">
-		<link rel="stylesheet" href="Castiglion_Fibocchi.css"> 
+		<link rel="stylesheet" href="css\Castiglion_Fibocchi.css"> 
 		
 	</head>
 	<body>
@@ -12,7 +12,7 @@
 			<h1>CASTIGLION FIBOCCHI</h1>
 		</header>
 		<div id="div_stemma">
-				<img src="Images\Castiglion_Fibocchi-Stemma.png" id="stemma" alt="Comune di Castiglion Fibocchi">
+				<img src="images\Castiglion_Fibocchi_Stemma.png" id="stemma" alt="Comune di Castiglion Fibocchi">
 		</div>
 		<div id="comuni">
 			<nav>
@@ -58,7 +58,7 @@
 			</section>
 			<br> <br>
 			<div id="div_mappa">
-				<img id="mappa" src="Images\Castiglion_Fibocchi-Mappa.png" alt="Mappa di Castiglion Fibocchi">
+				<img id="mappa" src="Images\Castiglion_Fibocchi_Mappa.png" alt="Mappa di Castiglion Fibocchi">
 				<p>Mappa di Castiglion Fibocchi</p>
 			</div> 
 			<section id="geografia">
