--- a/Arezzo.html
+++ b/Arezzo.html
@@ -4,7 +4,7 @@
    <head>
       <title>AREZZO, ARRETIUM.</title>       <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" type="text/css" href="Arezzo.css">
+        <link rel="stylesheet" type="text/css" href="css/Arezzo.css">
    </head>
    <body>
      
@@ -35,7 +35,7 @@
       </nav>
       <article>
       	 <header>Arezzo, Aarretium.
-      	 <img id="stemma" src="img/Arezzo_Stemma.png">
+      	 <img id="stemma" src="images/Arezzo_Stemma.png">
       </header>
       <section id="storia">
 
