--- a/Chiusi.html
+++ b/Chiusi.html
@@ -212,7 +212,7 @@ esercizio: creare una pagina web sul comune precendetemente assegnato
 
 </div>
 <div class=destra >
-<img id = "dimimmagine" src="immagini/ChiusiStemma.png" alt="Logo comune di Chiusi" style="width:800px;height:900px;" >
+<img id = "dimimmagine" src="images/ChiusiStemma.png" alt="Logo comune di Chiusi" style="width:800px;height:900px;" >
 <br>
 <br>
 <br>
@@ -223,7 +223,7 @@ esercizio: creare una pagina web sul comune precendetemente assegnato
 <br>
 <br>
 <br>
-<img id = "dimimmagine2" src="immagini/Chiusi.png" alt="Posizione geografica comune di Chiusi" style="width:800px;height:900px;" >
+<img id = "dimimmagine2" src="images/Chiusi.png" alt="Posizione geografica comune di Chiusi" style="width:800px;height:900px;" >
 <br>
 <br>
 <br>
@@ -323,7 +323,7 @@ esercizio: creare una pagina web sul comune precendetemente assegnato
 </table>
 <br>
 <br>
-<img id = "dimimmagine2" src="immagini/demografia.png" alt="Grafico abitanti censiti" style="width:800px;height:700px;" >
+<img id = "dimimmagine2" src="images/demografia.png" alt="Grafico abitanti censiti" style="width:800px;height:700px;" >
 </div>
 </div>
 
