sistemato veramente percorso Sinalunga

--- a/Sinalunga.html
+++ b/Sinalunga.html
@@ -8,12 +8,12 @@
     </head>
 <body>
 <div>
-    <img id="stemma" src="images\sinalunga_stemma.png" alt="sinalunga_stemma">
+    <img id="stemma" src="images/Sinalunga_Stemma.png" alt="sinalunga_stemma">
     <h1 id="titolo" style="color: rgb(180, 0, 0)"><b>COMUNE DI SINALUNGA</b></h1>
 </div>
 <div id="prima_parte">
     <div>
-    <img id="mappa" src="images\Sinalunga.png" alt="Sinalunga">
+    <img id="mappa" src="images/Sinalunga.png" alt="Sinalunga">
     <br>
     <br>
     <br>
