--- a/Sinalunga.html
+++ b/Sinalunga.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" >
         <link rel="stylesheet" type="text/css" href="css/Sinalunga_css.css">
+        <link rel="stylesheet" type="text/css" href="Comune.css">
     </head>
 <body>
 <div>
@@ -30,6 +31,7 @@
     <br>
     <br>
     <p>ALTRI COMUNI:</p>
+    <nav>
     <ul>
         <li id="Anghiari"> <a href="Anghiari.html" >Anghiari</a></li>
         <li id="Arezzo"> <a href="Arezzo.html" >Arezzo</a></li>
@@ -52,6 +54,7 @@
         <li id="Subbiano"> <a href="Subbiano.html" >Subbiano</a></li>
         <li id="Torrita_di_Siena"> <a href="Torrita_di_Siena.html" >Torrita di Siena</a></li>
      </ul>
+    </nav>
     </div>
 </div>
 <hr></hr>
