Modificato MonteSanSavino image

--- a/Monte_San_Savino.html
+++ b/Monte_San_Savino.html
@@ -6,8 +6,8 @@
 		<link href="css/Monte_San_Savino.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
-		<img id="cartina" src="Images\Mappa_Monte_San_Savino.png">
-		<img id="stemma" src="Images\stemma.png">
+		<img id="cartina" src="images/Mappa_Monte_San_Savino.png">
+		<img id="stemma" src="images/Stemma_Monte_San_Savino.png">
 		<section id="testo">
 		<header>
 			<h1 id="titolo" >MONTE S. SAVINO</h1>
