--- a/Laterina.html
+++ b/Laterina.html
@@ -8,9 +8,9 @@
 <head>
    <title>Laterina</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="Laterina.css" >
-    <img src="LaterinaIMG/LS.png" alt="img" id="stemma">
-    <img src="LaterinaIMG/LR.png" alt="img" id="regione">
+    <link rel="stylesheet" type="text/css" href="css/Laterina.css" >
+    <img src="images/Laterina_Stemma.png" alt="img" id="stemma">
+    <img src="images/Laterina.png" alt="img" id="regione">
 </head>
 
 <body>
