sistemati link Castiglion Fiorentino

--- a/Castiglion_Fiorentino.html
+++ b/Castiglion_Fiorentino.html
@@ -3,15 +3,16 @@
         <title>Castiglion Fiorentino</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.</p> <p>0">
-        <link rel="stylesheet" type="text/css" href="CastiglionFiorentinoStili.css" >
+        <link rel="stylesheet" type="text/css" href="css/Castiglion_FiorentinoStili.css" >
     </head>
     <body>
         <nav>Castiglion Fiorentino</nav>
       
 		<h1>CASTIGLION FIORENTINO
 		</h1>
-		<img src="image/Castiglion_Fiorentino_Stemma.png" alt="Logo Castiglion Fiorentino"> </br>
-        <img src="image/Castiglion_Fiorentino_Mappa.png" alt="Mappa Castiglion Fiorentino"> </br>
+		
+		<img src="images/Castiglion_Fiorentino_Stemma.png" alt="Stemma Castiglion Fiorentino"> </br>
+        <img src="images/Castiglion_Fiorentino_Mappa.png" alt="Mappa Castiglion Fiorentino"> </br>
 
 		<article>
             <h2 id ="sto"> LA STORIA: </h2>
