--- a/Monte_Santa_Maria_Tiberina.html
+++ b/Monte_Santa_Maria_Tiberina.html
@@ -11,7 +11,7 @@
 </nav>
 <header>
 <div id="div_img">
-<img id="stemma" src="C:\Users\aless\Desktop\ToscanaGit\images\Monte_Santa_Maria_Tiberina_Stemma.png">
+<img id="stemma" src="images/Monte_Santa_Maria_Tiberina_Stemma.png">
 </div>
 <div id="div_titolo">
 <h3 id="comune"><br>MONTE S. MARIA (Castrum Montis S. Mariae) nella Valle del Tevere</h3>
@@ -54,7 +54,7 @@
 <p>Al prenominato Marchese Piero del Monte S. Maria, non che ai Marchesi Angelo e Ugolino di Guiduccio della stessa consorteria, appella un privilegio concesso nel 14 maggio 1382 dall’Imperatore Carlo IV, col quale veniva confermato ad essi il titolo di marchesi del Monte S.</p>
 <p>Maria da continuarsi nella loro linea per ordine di primogenitura.</p>
 <p>Ma qui cominciano gli atti di accomandigia di quei marchesi alla Repubblica Fiorentina, a partire dal preaccennato marchese Piero del Monte S. Maria; il quale fu ricevuto nel 1390 insieme coi suoi figli, ville, castelli e giurisdizioni sotto la protezione della Signoria di Firenze.</p>
-<img id="mappa" src="C:\Users\aless\Desktop\ToscanaGit\images\Monte_Santa_Maria_Tiberina_Mappa.png">
+<img id="mappa" src=" images/Monte_Santa_Maria_Tiberina_mappa.png">
 </section>
 <section id="altro">
  <nav>
