--- a/Civitella_in_Val_di_Chiana.html
+++ b/Civitella_in_Val_di_Chiana.html
@@ -2,19 +2,19 @@
 <html>
 <head>
 <title>Civitella in Val di Chiana</title>
-<link href="Civitella_in_Val_di_Chiana.css" rel="stylesheet" type="text/css">
+<link href="css/Civitella_in_Val_di_Chiana.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
 </head>
 <body>
 
-<img id="comune" src="images\Civitella_in_Val_di_Chiana-Stemma.png">
+<img id="comune" src="images/Civitella_in_Val_di_Chiana-Stemma.png">
 <header>
 <h1>CIVITELLA DEL VISCONTATO DI AMBRA o CIVITELLA del VESCOVO</h1>
 </header>
 <hr>
 <article>
 <section id="storia"> 
-<h2>STORIA DEL POSTO</h2>
+<h2>STORIA</h2>
 <p>Fra la Val d’Ambra e la Val di Chiana. Castello capoluogo di Comunità e di Potesteria nel Vicariato Regio di Monte S. Savino, Diocesi e Giurisdizione di Arezzo.</p>
 <p>Risiede sulla prominente cresta di un poggio, il di cui fianco occidentale acquapende in Val d’Ambra, mentre dall’opposto lato scende in Val di Chiana, circa 900 braccia sopra il livello del Mediterraneo, nel grado 29° 23’ di longitudine e 43° 25’ di latitudine, 9 miglia toscane a libeccio di Arezzo, 6 a settentrione di Monte S. Savino, e 8 miglia toscane a scirocco del Bucine in Val d’Ambra.</p>
 <p>Fu denominato Civitella del Vescovo, per essere stato questo castello immediatamente soggetto ai vescovi di Arezzo, che vi fecero spesse volte permanenza, mentre era il capoluogo del loro viscontado di Val d’Ambra.</p>
@@ -23,13 +23,13 @@
 <p>La parrocchia di S. Maria di Civitella fu tra i molti priorati appartenuti ai monaci benedettini della sottostante badia al Pino, per effetto di una donazione del 1046, fatta da Immone vescovo di Arezzo. La chiesa di Civitella e quella della stessa badia al Pino furono incorporate al monastero di S. Brigida presso Firenze dal pontefice Eugenio IV per bolla del 17 novembre 1441; unione che confermò il pontefice Niccolò V con breve del 20 maggio 1447. Il qual pontefice nel 1451 ammensò al monastero medesimo di S. Brigida quello delle monache di S. Croce fuori di Civitella, ridotto allora a una sola conversa.</p>
 <p>(ARCH. DIPL. FIOR. Osped. di Bonifazio.) </p>
 </section>
-<img id="mappa" src="images\Civitella_in_Val_di_Chiara.png">
+<img id="mappa" src="images/Civitella_in_Val_di_Chiara.png">
 
 									
  
  <section id="gegrafia">
  <hr>
- <h2>GEOGRAFIA DEL POSTO</h2>
+ <h2>GEOGRAFIA</h2>
  <p>Comunità di Civitella. – La superficie territoriale di questa Comunità situata sulla linea dei poggi che separano la Val d’Ambra dalla Val di Chiana, a partire dal torrente Esse del Monte S. Savino sino alla riva sinistra dell’Arno lungo la Valle dell’Inferno, abbraccia 29635 quadrati, dei quali sono da detrarre 712 quadrati per corsi d’acqua e pubbliche strade.</p>
 <p>Vi si trovava nel 1833 una popolazione di 4883 abitanti a ragione di 136 persone per ogni miglio quadrato di suolo imponibile.</p>
 <p>Confina con 5 Comunità; a libeccio con quella del Monte S. Savino, per una parte mediante il torrente Esse dalla confluenza delle Trove sino alla strada che va a Oliveto; dal qual punto piegando verso ostro abbandona l’Esse, di dove progredisce per termini artificiali, e talvolta naturali, sino a che col fosso Tegoleto scende nel Canal Maestro della Chiana.</p>
@@ -39,10 +39,12 @@
 <p>La qualità e fisica struttura del terreno di questa Comunità, per la parte che acquapende in Val d’Ambra consiste in gran parte in calcarea compatta appenninica (alberese), a luoghi alternante con strati di grès antico, o di arenaria, mentre il suolo delle colline poste fra l’Esse e il Canal Maestro della Chiana appartiene precipuamente al terreno rudimentario di macigno e di tufo calcareosiliceo, coperto nella pianura da quello più recente di alluvione.</p>
 <p>È suscettibile questo e quello di dare ogni sorta di prodotti agrarj; ma i più copiosi sono le viti, i gelsi e altri alberi da frutto, fra i quali primeggia l’olivo, pianta che prima del mille allignò in cotesta ubertosa contrada sul poggio denominata di Oliveto, dove sorsero due villaggi e due popoli che ne perpetuarono il nome.</p>
 <p>Il professor Giulj nel 1828 calcolava, che nelle colline spettanti alla Comunità di Civitella vi esistessero, sopra una superficie di miglia 5 e 1/2 quadrate ridotta a coltivazione, 8000 piante di olivi, e 18000 viti. Il resto della parte montuosa valutata circa 21 miglia quadrate la vide occupata dal bosco o destinata al pascolo. La sementa dei cereali fra poggio e pianura secondo i calcoli di quel professore occuperebbe circa 12000 stajate.</p>
+
 <p>In quanto alla pianura spettante alla Comunità di Civitella, essa è destinata tutta alla sementa, meno 500 quadrati di prati perenni sopra miglia 10 e 1/2 in circa di superficie, dove l’autore stesso valutò esservi 288000 viti e 40000 alberi di gelsi.</p>
 <p>Da simili calcoli sembra risultare, che la maggiore risorsa agraria di questa Comunità debba consistere nel vino, nell’olio e nella sete.</p>
 <p>Alla Comunità di Civitella con provvedimento speciale del 14 novembre 1774 vennero assegnati nove preesistenti Comuni. 1. Civitella; 2. Oliveto; 3. Viccio Maggio e Tuori; 4. Tegoleto; 5. Badia al Pino; 6. Ciggiano; 7.</p>
 <p>Cornia; 8. Montarfone; 9 Montoto.</p>
+
 <p>Con quella legge fu escluso dall’antico corpo della Comunità di Civitella il comune di Montagnano, unito d’allora in poi alla Comunità e Cancelleria del Monte S. Savino.</p>
 <p>Non vi sono in Civitella mercati né fie re, ad eccezione di una fierucola che cade nel lunedì della prima settimana di ottobre.</p>
 <p>La Comunità mantiene un medico, un chirurgo e un 564 maestro di scuola.</p>
@@ -52,7 +54,7 @@
 
 <section id="dati">
 <hr>
-<h2>DIOCESI E DATI DEMOGRAFICI DEL POSTO</h2>
+<h2>DIOCESI E DATI DEMOGRAFICI</h2>
 <p>Esiste pure in Civitella la cancelleria per questa sola Comunità. – L’ingegnere di Circondario, l’ufizio di esazione del Registro, la conservazione delle Ipoteche e la Ruota si trovano in Arezzo.</p>
 <p>QUADRO della popolazione della Comunità di CIVITELLA a tre epoche diverse nome del luogo: Badia al Pino (già Pieve al Toppo), titolo della chiesa: S. Bartolommeo già S. Martino (Pieve), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 327, abitanti nel 1745: n° 407, abitanti nel 1833: n° 581 </p> 
 <p>nome del luogo: Ciggiano, titolo della chiesa: S. Biagio (Pieve), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 581, abitanti nel 1745: n° 407, abitanti nel 1833: n° 634 </p>
@@ -60,7 +62,7 @@
 <p>nome del luogo: Cornia, titolo della chiesa: S. Angelo (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 167, abitanti nel 1745: n° 241, abitanti nel 1833: n° 292 </p> 
 <p> nome del luogo: S. Martino in Poggio, titolo della chiesa: S. Maria e S. Carlo (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n°, abitanti nel 1745: n°, abitanti nel 1833: n° 259</p>
 <p> nome del luogo: Montarfone annesso di Impiano, titolo della chiesa: S. Andrea in S. Cristofano (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 86, abitanti nel 1745: n°, abitanti nel 1833: n° 64 </p>
-<p> nome del luogo: Montoto e Majano, titolo della chiesa: S. Giovanni Battista e S. Maria (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 190, abitanti nel 1745: n° 225, abitanti nel 1833: n° 315 </p> 
+<p> nome del luogo: Montoto e Majano, titolo della chiesa: S. Giovanni Battista e S. Maria (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel  1551: n° 190, abitanti nel 1745: n° 225, abitanti nel 1833: n° 315 </p> 
 <p> nome del luogo: Oliveto Villaggio, titolo della chiesa: S. Giovanni (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 560 (con S. Andrea a Oliveto Castello), abitanti nel 1745: n° 64, abitanti nel 1833: n° 279 </p>
 <p> nome del luogo: Oliveto Castello, titolo della chiesa: S. Andrea (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 560 (con S. Giovanni a Oliveto Villaggio), abitanti nel 1745: n° 368, abitanti nel 1833: n° 257</p>
  <p> nome del luogo: Tegoleto, titolo della chiesa: S. Biagio (Rettoria), diocesi cui appartiene: Arezzo, abitanti nel 1551: n° 388, abitanti nel 1745: n° 642, abitanti nel 1833: n° 683</p>
