--- a/Castiglion_Fibocchi.html
+++ b/Castiglion_Fibocchi.html
@@ -3,50 +3,62 @@
 	<head>
 		<title> Castiglion Fibocchi </title>
 		<meta charset="UTF-8">
-
-		<link rel="stylesheet" href="css/Castiglion_Fibocchi.css"> 
-
-		
+		<link rel="stylesheet" href="Comune.css"> 	
 	</head>
 	<body>
-	
+		<img id="cartina" src="Images\Castiglion_Fibocchi_Mappa.png" alt="Mappa di Castiglion Fibocchi">
+		<img id="stemma" src="images\Castiglion_Fibocchi_Stemma.png" alt="Comune di Castiglion Fibocchi">
+		<section id="testo">
 		<header>
-			<h1>CASTIGLION FIBOCCHI</h1>
+			<h1 id="titolo">CASTIGLION FIBOCCHI</h1>
 		</header>
-		<div id="div_stemma">
-				<img src="images\Castiglion_Fibocchi_Stemma.png" id="stemma" alt="Comune di Castiglion Fibocchi">
-		</div>
-		<div id="comuni">
+		<section id="segnalibri">
+			<ul>	
+				<li><a href='#elenco_comuni'>Vai agli altri comuni</a></li>
+				<li><a href='#locazione'>Vai alla posizione</a></li>
+				<li><a href='#storia'>Vai alla storia</a></li>
+				<li><a href='#popolazione'>Vai alla popolazione</a></li>
+				<li><a href='#territorio'>Vai al territorio</a></li>
+				<li><a href='#chiese'>Vai alle chiese</a></li>
+			</ul>
+		</section>
+		<section id ="elenco_comuni">
+			<h2>Altri comuni della zona.</h2>
 			<nav>
 				<ul>
-				<h3>I comuni della zona:</h3>
-				<li id="Anghiari"> <a href="Anghiari.html" >Anghiari</a></li>
-				<li id="Arezzo"> <a href="Arezzo.html" >Arezzo</a></li>
-				<li id="Capolona"> <a href="Capolona.html" >Capolona</a></li>
-				<li id="Castiglion_Fibocchi"> <a href="Castiglion_Fibocchi.html" >Castiglion Fibocchi</a></li>
-				<li id="Castiglion_Fiorentino"> <a href="Castiglion_Fiorentino.html" >Castiglion Fiorentino</a></li>
-				<li id="Chianciano"> <a href="Chianciano.html" >Chianciano</a></li>
-				<li id="Chiusi"> <a href="Chiusi.html" >Chiusi</a></li>
-				<li id="Civitella_in_Val_di_Chiana"> <a href="Civitella_in_Val_di_Chiana.html" >Civitella in Val di Chiana</a></li>
-				<li id="Cortona"> <a href="Cortona.html" >Cortona</a></li>
-				<li id="Foiano_della_Chiana"> <a href="Foiano_della_Chiana.html" >Foiano della Chiana</a></li>
-				<li id="Laterina"> <a href="Laterina.html" >Laterina</a></li>
-				<li id="Marciano_della_Chiana"> <a href="Marciano_della_Chiana.html" >Marciano della Chiana</a></li>
-				<li id="Monte_San_Savino"> <a href="Monte_San_Savino.html" >Monte San Savino</a></li>
-				<li id="Monte_Santa_Maria_Tiberina"> <a href="Monte_Santa_Maria_Tiberina.html" >Monte Santa Maria Tiberina</a></li>
-				<li id="Montepulciano"> <a href="Montepulciano.html" >Montepulciano</a></li>
-				<li id="Monterchi"> <a href="Monterchi.html" >Monterchi</a></li>
-				<li id="Pienza"> <a href="Pienza.html" >Pienza</a></li>
-				<li id="Sinalunga"> <a href="Sinalunga.html" >Sinalunga</a></li>
-				<li id="Subbiano"> <a href="Subbiano.html" >Subbiano</a></li>
-				<li id="Torrita_di_Siena"> <a href="Torrita_di_Siena.html" >Torrita di Siena</a></li>
+					<section id="comuni1">
+						<li id="Anghiari"> <a href="Anghiari.html" >Anghiari</a></li>
+						<li id="Arezzo"> <a href="Arezzo.html" >Arezzo</a></li>
+						<li id="Capolona"> <a href="Capolona.html" >Capolona</a></li>
+						<li id="Castiglion_Fibocchi"> <a href="Castiglion_Fibocchi.html" >Castiglion Fibocchi</a></li>
+						<li id="Castiglion_Fiorentino"> <a href="Castiglion_Fiorentino.html" >Castiglion Fiorentino</a></li>
+						<li id="Chianciano"> <a href="Chianciano.html" >Chianciano</a></li>
+						<li id="Chiusi"> <a href="Chiusi.html" >Chiusi</a></li>
+						<li id="Civitella_in_Val_di_Chiana"> <a href="Civitella_in_Val_di_Chiana.html" >Civitella in Val di Chiana</a></li>
+						<li id="Cortona"> <a href="Cortona.html" >Cortona</a></li>
+						<li id="Foiano_della_Chiana"> <a href="Foiano_della_Chiana.html" >Foiano della Chiana</a></li>
+					</section>
 				</ul>
-
+				<ul>
+					<section id="comuni2">
+						<li id="Laterina"> <a href="Laterina.html" >Laterina</a></li>
+						<li id="Marciano_della_Chiana"> <a href="Marciano_della_Chiana.html" >Marciano della Chiana</a></li>
+						<li id="Monte_San_Savino"> <a href="Monte_San_Savino.html" >Monte San Savino</a></li>
+						<li id="Monte_Santa_Maria_Tiberina"> <a href="Monte_Santa_Maria_Tiberina.html" >Monte Santa Maria Tiberina</a></li>
+						<li id="Montepulciano"> <a href="Montepulciano.html" >Montepulciano</a></li>
+						<li id="Monterchi"> <a href="Monterchi.html" >Monterchi</a></li>
+						<li id="Pienza"> <a href="Pienza.html" >Pienza</a></li>
+						<li id="Sinalunga"> <a href="Sinalunga.html" >Sinalunga</a></li>
+						<li id="Subbiano"> <a href="Subbiano.html" >Subbiano</a></li>
+						<li id="Torrita_di_Siena"> <a href="Torrita_di_Siena.html" >Torrita di Siena</a></li>
+					</section>
+				</ul>
 			</nav>
-		</div>
+		</section>
 		<article id="articolo">
+			
+			<h2>Un po' di storia.</h2>
 			<section id="storia">
-				<h3>La storia del comune</h3>
 				CASTIGLION FIBOCCHI (Castellio de filiis Bocchi) nel Val d'Arno aretino. Piccolo villaggio capoluogo di una Comunità denominata i Due comuni distrettuali di Laterina, con pieve (S. Pietro di Piazzano in S. Ilario di Castiglion Fibocchi), Giurisdizione e 10 miglia toscane a levante di Montevarchi, Diocesi e Compartimento di Arezzo.
 				È situato alla base meridionale del monte, sul cui dorso risiede il castello di Talla, nell'ultima propaggine dell'Appennino che da Pratomagno si distende verso il piano di Arezzo sino alla gola dell'Imbuto; nel grado 29° 25’ di longitudine e 43° 32’ di latitudine; 7 miglia toscane a maestro di Arezzo, 2 miglia a ponente-libeccio di Capolona, e 3 miglia toscane a levante grecale di Laterina.
 				Questo Castiglione sino dal secolo XII fu ceduto in feudo dai conti Guidi ai Pazzi magnati del Valdarno superiore; stante che l'imperatore Arrigo VI, nel 1191, e FederigoII, nel 1220, confermarono Castiglione del Val d'Arno ai figli di Ottaviano Pazzi, forse di quello sopracchiamato Bocco, per cui fu distinto dagli altri Castiglioni, dicendosi de'Figli di Bocco, e poi per contrazione de'Fibocchi.
@@ -58,26 +70,64 @@
 				Confina con 6 comunità; a ostro con quella di Laterina, a partire dalla ripa sinistra del torrente Lorenaccio, di dove per termini artificiali arriva alla strada provinciale, mediante la quale confina con la Comunità di Arezzo sino alla riva pedonale di Montagnoli. Costà voltando la fronte da ostro a levante camminano di conserva le due Comunità sino alle scaturigini del borro dei Fossati, dove subentra la Comunità di Capolona. Con quest'ultima fronteggia dal lato di levante grecale salendo la costa del monte, presso al cui crine incontra la Comunità di Talla.
 				Al giogo della casa del vento volta dopo breve corso il cammino da grecale a maestrale avendo di faccia la Comunità di Loro; con la quale riscende nel Lorenaccio sino alla strada dei Sette ponti. Costà trova la Comunità di Terranuova e con essa prosegue la corrente del Lorenaccio, che poco appresso abbandona per passare alla sinistra dello stesso torrente dove ritrova la Comunità di Arezzo.
 			</section>
-			<br> <br>
-			<div id="div_mappa">
-				<img id="mappa" src="Images\Castiglion_Fibocchi_Mappa.png" alt="Mappa di Castiglion Fibocchi">
-				<p>Mappa di Castiglion Fibocchi</p>
-			</div> 
-			<section id="geografia">
-				<h3>La geografia del comune</h3>
+			
+			<h2>Dove si trova?</h2>
+			<section id="locazione">
 				Fra le strade rotabili, che attraversano questo territorio, si conta quella provinciale di Sette ponti; dalla quale si diramano due tronchi per condurre a Castiglion Fibocchi.
 				Tutte le altre vie comunitative sono pedonali.
 				La strada comunitativa che staccasi dalla provinciale per salire il poggio passando dalla pieve di S. Quirico a Gello Biscardo, e di là varcando nel Casentino per Talla, porta il nome di Montagnoli, io dubito, da un'antica chiesa con ospizio o romitorio intitolato a S. Agnolo in Terraglia.
 				Il più grosso torrente che attraversa il territorio di questa Comunità è il Bregna. Esso scaturisce presso Lucignanello, dalla costa del monte che divide il Casentino dal piano di Arezzo; accoglie per via il rio di Tignana, innanzi di bagnare le mura di Castiglion Fibocchi: mentre appena uscito dal suo territorio riceve il borro del Romitorio o di Carpineto, passando a piè del colle su cui risiede la grandiosa villa di Monsoglio, sotto la quale si unisce ad esso il rio di Riganzi; di là lambisce la base orientale della collinetta, su cui esistono gli avanzi della vecchia pieve di S. Cassiano a Laterina, dopo di che sbocca in Arno dirimpetto al torrente Guanscione.
 				La struttura e qualità del terreno di questa pendice estrema di Pratomagno consiste per la maggior parte in arenaria micacea o macigno tufaceo di color castagnolo e friabile, coperto in vari luoghi da antiche ghiaie, in seno a cui prosperano gli olivi e le viti, che insieme coi castagni sono i prodotti maggiori del territorio.
 			</section>
-			<br> <br>
+			
+			<h2>Informazioni sugli abitanti</h2>
 			<section id="popolazione">
-				<h3>La popolazione del comune</h3>
 				La legge del 29 settembre 1774, che decretò la formazione di questa Comunità, composta dei due antichi comuni, Castiglion Fibocchi e Gello Biscardo, dichiarò i medesimi distrettuali di Laterina, perchè addetti a quella potesteria. La quale posteriormente fu riunita a quella di Montevarchi, dipendente attualmente per gli atti di governo e per il criminale dal Commissario Regio di Arezzo, dove trovasi la cancelleria comunitativa di Castiglion Fibocchi, l'ingegnere di Circondario, l'ufizio di esazione del Registro, la conservazione delle Ipoteche e la Ruota.
-				POPOLAZIONE dei DUE COMUNI DISTRETTUALI DI LATERINA, ossia di CASTIGLION FIBOCCHI a tre epoche diverse - nome del luogo: CASTIGLION FIBOCCHI, titolo della chiesa: SS. Pietro e Ilario (Pieve), abitanti nel 1551: n° 454, abitanti nel 1745: n° 429, abitanti nel 1833: n° 471 - nome del luogo: Gello Biscardo, titolo della chiesa: S.
+				<br>POPOLAZIONE dei DUE COMUNI DISTRETTUALI DI LATERINA, ossia di CASTIGLION FIBOCCHI a tre epoche diverse: <!-- - nome del luogo: CASTIGLION FIBOCCHI, titolo della chiesa: SS. Pietro e Ilario (Pieve), abitanti nel 1551: n° 454, abitanti nel 1745: n° 429, abitanti nel 1833: n° 471 - nome del luogo: Gello Biscardo, titolo della chiesa: S.
 				Giovanni Battista (Rettoria), abitanti nel 1551: n° 85, abitanti nel 1745: n°154, abitanti nel 1833: n° 172 - totale abitanti anno 1551: n° 539 - totale abitanti anno 1745: n° 583 Frazione di popolazioni provenienti da altre Comunità - nome del luogo: Borro, titolo della chiesa: S. Biagio, comunità donde deriva: Loro, abitanti nel 1833: n° 48 - nome del luogo: Capolona, titolo della chiesa: S.
-				Giovanni, comunità donde deriva: Capolona, abitanti nel 1833: n° 17 - totale abitanti: n° 65 - TOTALE abitanti anno 1833: n° 708 
+				Giovanni, comunità donde deriva: Capolona, abitanti nel 1833: n° 17 - totale abitanti: n° 65 - TOTALE abitanti anno 1833: n° 708 -->
+				<br> <br>
+				
+				<center>
+					<table border="5">
+						<tr>
+							<th> POPOLAZIONE </th>
+							<th> ANNO 1551 </th>
+							<th> ANNO 1745 </th>
+							<th> ANNO 1833 </th>
+						</tr>
+						<tr>
+							<th> CASTIGLION FIBOCCHI </th>
+							<th> 454 </th>
+							<th> 429 </th>
+							<th> 471 </th>
+						</tr>
+						<tr>
+							<th> GELLO BISCARDO </th>
+							<th> 85 </th>
+							<th> 154 </th>
+							<th> 172 </th>
+						</tr>
+						<tr>
+							<th> BORRO </th>
+							<th> --- </th>
+							<th> --- </th>
+							<th> 48 </th>
+						</tr>
+						<tr>
+							<th> CAPOLONA </th>
+							<th> --- </th>
+							<th> --- </th>
+							<th> 17 </th>
+						</tr>
+						<tr>
+							<th> TOTALE </th>
+							<th> 539 </th>
+							<th> 583 </th>
+							<th> 708 </th>
+						</tr>
+					</table>
+				</center>
 			</section>
 	</body>
 </html>
