--- a/Civitella_in_Val_di_Chiana.html
+++ b/Civitella_in_Val_di_Chiana.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Civitella in Val di Chiana</title>
-<link href="Civitella_in_Val_di_Chiana.css" rel="stylesheet" type="text/css">
+<link href="css\Civitella_in_Val_di_Chiana.css" rel="stylesheet" type="text/css">
 <meta charset="UTF-8">
 </head>
 <body>
