Modifica di prova

--- a/Castiglion_Fibocchi.html
+++ b/Castiglion_Fibocchi.html
@@ -23,7 +23,7 @@
 			</ul>
 		</section>
 		<section id ="elenco_comuni">
-			<h2>Altri comuni della zona.</h2>
+			<h2>Gli altri comuni</h2>
 			<nav>
 				<ul>
 					<section id="comuni1">
